# Assembler-ppc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  asm.cpp  meson.build  tinyasm.cpp
include/: asm.h
src/: asm.cpp
test/: CMakeLists.txt  test.cpp
